--- a/full-website/package.json
+++ b/full-website/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.687.0",
     "@hookform/resolvers": "^3.9.1",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
