--- a/full-website/package.json
+++ b/full-website/package.json
@@ -20,7 +20,9 @@
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-email": "^3.0.2",
     "react-hook-form": "^7.53.2",
+    "resend": "^4.0.1-alpha.0",
     "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8"
   },
