--- a/mobile/package.json
+++ b/mobile/package.json
@@ -25,7 +25,7 @@
     "expo-haptics": "~14.0.0",
     "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.9",
+    "expo-router": "^3.1.0",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
