--- a/mobile/app.json
+++ b/mobile/app.json
@@ -27,10 +27,9 @@
       [
         "expo-splash-screen",
         {
-          "image": "@/assets/images/splash-icon.png",
-          "imageWidth": 200,
+          "image": "@/assets/images/splash.png",
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#F3ECF4"
         }
       ]
     ],
